--- a/style.css
+++ b/style.css
@@ -3,3 +3,26 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+  header nav a {
+    padding: 10px;
+    background-color: grey;
+  }
+  #featured-property figcaption {
+    font-size: 14px;
+    text-align: center;
+  }
+  #featured-property p {
+    width: 800px;
+    margin: 10px auto;
+  }
+  #details div {
+    float: left;
+    width: 25%;
+    text-align: center;
+    background-color: white;
+  }
+
